product page css

--- a/catalog.html
+++ b/catalog.html
@@ -222,25 +222,31 @@
   <footer class="page-footer">
     <div class="container">
       <p class="footer-contacts">
-          барбершоп «бородинский»<br>
-          адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
-          <a href="#">Как нас найти?</a><br>
-          телефон: +7 (495) 666-02-66
-        </p>
+        барбершоп «бородинский»<br>
+        адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
+        <a href="#">Как нас найти?</a><br>
+        телефон: +7 (495) 666-02-66
+      </p>
 
-        <div class="footer-social">
-          <b>давайте дружить!</b>
-          <ul class="social-list">
-            <li><a href="#" class="social-button"><span class="visually-hidden">вконтакте</span></a></li>
-            <li><a href="#" class="social-button"><span class="visually-hidden">фейсбук</span></a></li>
-            <li><a href="#" class="social-button"><span class="visually-hidden">инстаграм</span></a></li>
-          </ul>
-        </div>
+      <div class="footer-social">
+        <b>давайте дружить!</b>
+        <ul class="social-list">
+          <li><a href="#" class="social-button"><span class="visually-hidden">
+            вконтакте
+          </span></a></li>
+          <li><a href="#" class="social-button"><span class="visually-hidden">
+            фейсбук
+          </span></a></li>
+          <li><a href="#" class="social-button"><span class="visually-hidden">
+            инстаграм
+          </span></a></li>
+        </ul>
+      </div>
 
-        <p class="footer-copyright">
-          <b>Разработано</b>
-          <a class="button" href="https://htmlacademy.ru/">html academy</a>
-        </p>
+      <p class="footer-copyright">
+        <b>Разработано</b>
+        <a class="button" href="https://htmlacademy.ru/">html academy</a>
+      </p>
     </div>
   </footer>
 
