--- a/catalog-item.html
+++ b/catalog-item.html
@@ -28,7 +28,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="container">
     <h1 class="page-title">Набор для путешествий «baxter of california»</h1>
 
     <ul class="breadcrumbs">
@@ -38,72 +38,84 @@
       <li class="breadcrumbs-current">Набор для путешествий «baxter of california»</li>
     </ul>
 
-    <section class="product-photos">
-      <h2 class="visually-hidden">Изображения товара</h2>
-      <p class="product-photo-full">
-        <img src="./img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
-      </p>
-      <ul class="product-photo-preview">
-        <li><img src="./img/product-small-1.jpeg" width="140" height="149" alt="Фото в анфас"></li>
-        <li><img src="./img/product-small-2.jpeg" width="140" height="149" alt="Фото в профиль"></li>
-        <li><img src="./img/product-small-3.jpeg" width="140" height="149" alt="Фото отдельной части"></li>
-      </ul>
-    </section>
+    <div class="product-columns">
+      <section class="product-photos">
+        <h2 class="visually-hidden">Изображения товара</h2>
+        <p class="product-photo-full">
+          <img src="./img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
+        </p>
+        <ul class="product-photo-preview">
+          <li><img src="./img/product-small-1.jpeg" width="140" height="149" alt="Фото в анфас"></li>
+          <li><img src="./img/product-small-2.jpeg" width="140" height="149" alt="Фото в профиль"></li>
+          <li><img src="./img/product-small-3.jpeg" width="140" height="149" alt="Фото отдельной части"></li>
+        </ul>
+      </section>
 
-    <section class="product-info">
-      <h2 class="visually-hidden">Описание товара</h2>
-      <p class="product-description">
-        <span class="product-availability">есть в наличии</span>
-        <span class="product-article">артикул: dexter-ae</span>
-      </p>
+      <section class="product-info">
+        <h2 class="visually-hidden">Описание товара</h2>
+        <p class="product-description">
+          <span class="product-availability">есть в наличии</span>
+          <span class="product-article">артикул: dexter-ae</span>
+        </p>
 
-      <p class="product-text">
-        Travel kit - необходимый аксессуар во время любого
-        путешествия. В аккуратной кожаной сумке находится все, что
-        нужно для бритья и ухода за кожей во время рабочей поездки
-        или отдыха: средство для умывания, увлажняющий крем, крем
-        для бритья, крем после бритья, шампунь. Набор также может
-        стать отличным подарком.
-      </p>
+        <p class="product-text">
+          Travel kit - необходимый аксессуар во время любого
+          путешествия. В аккуратной кожаной сумке находится все, что
+          нужно для бритья и ухода за кожей во время рабочей поездки
+          или отдыха: средство для умывания, увлажняющий крем, крем
+          для бритья, крем после бритья, шампунь. Набор также может
+          стать отличным подарком.
+        </p>
 
-      <p class="product-price">
-        <span>2 900 ₽</span>
-        <a class="button" href="#">купить</a>
-      </p>
+        <p class="product-price">
+          <span>2 900 ₽</span>
+          <a class="button" href="#">купить</a>
+        </p>
 
-      <h3>В набор входят:</h3>
-      <ul class="kit-list">
-        <li>средство для умывания (50 мл)</li>
-        <li>увлажняющий крем (50 мл)</li>
-        <li>крем для бритья (50 мл)</li>
-        <li>крем после бритья, шампунь (50 мл)</li>
-        <li>удобная кожаная косметичка</li>
-      </ul>
-    </section>
+        <h3>В набор входят:</h3>
+        <ul class="kit-list">
+          <li>средство для умывания (50 мл)</li>
+          <li>увлажняющий крем (50 мл)</li>
+          <li>крем для бритья (50 мл)</li>
+          <li>крем после бритья, шампунь (50 мл)</li>
+          <li>удобная кожаная косметичка</li>
+        </ul>
+      </section>
+    </div>
+
+
 
   </main>
 
   <footer class="page-footer">
-    <p class="footer-contacts">
-      барбершоп «бородинский»<br>
-      адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
-      <a href="#">Как нас найти?</a><br>
-      телефон: +7 (495) 666-02-66
-    </p>
+    <div class="container">
+      <p class="footer-contacts">
+        барбершоп «бородинский»<br>
+        адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
+        <a href="#">Как нас найти?</a><br>
+        телефон: +7 (495) 666-02-66
+      </p>
 
-    <div class="footer-social">
-      <b>давайте дружить!</b>
-      <ul class="social-list">
-        <li><a href="#" class="social-button">вконтакте</a></li>
-        <li><a href="#" class="social-button">фейсбук</a></li>
-        <li><a href="#" class="social-button">инстаграм</a></li>
-      </ul>
+      <div class="footer-social">
+        <b>давайте дружить!</b>
+        <ul class="social-list">
+          <li><a href="#" class="social-button"><span class="visually-hidden">
+            вконтакте
+          </span></a></li>
+          <li><a href="#" class="social-button"><span class="visually-hidden">
+            фейсбук
+          </span></a></li>
+          <li><a href="#" class="social-button"><span class="visually-hidden">
+            инстаграм
+          </span></a></li>
+        </ul>
+      </div>
+
+      <p class="footer-copyright">
+        <b>Разработано</b>
+        <a class="button" href="https://htmlacademy.ru/">html academy</a>
+      </p>
     </div>
-
-    <p class="footer-copyright">
-      <b>Разработано</b>
-      <a class="button" href="https://htmlacademy.ru/">html academy</a>
-    </p>
   </footer>
 
   <section class="modal modal-authentication">
