--- a/price.html
+++ b/price.html
@@ -28,7 +28,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="container">
     <h1 class="page-title">Прайс-лист</h1>
     <ul class="breadcrumbs">
       <li><a href="index.html">Главная</a></li>
@@ -36,73 +36,77 @@
     </ul>
 
     <p class="promo-title">Истинно мужская классика</p>
-    <section class="hair-products">
-      <h2>мы используем только лучшие средства:</h2>
-      <ul class="hair-products-list">
-        <li>baxter of california</li>
-        <li>mr natty</li>
-        <li>suavecito</li>
-        <li>malin+goetz</li>
-      </ul>
-    </section>
 
-    <section class="price-services">
-      <h2>цены на услуги наших мастеров:</h2>
-      <table>
-        <tr>
-          <td>стрижка</td>
-          <td>1500 ₽</td>
-        </tr>
-        <tr>
-          <td>стрижка бороды</td>
-          <td>500 ₽</td>
-        </tr>
-        <tr>
-          <td>накрутка усов</td>
-          <td>350 ₽</td>
-        </tr>
-      </table>
-    </section>
+    <div class="price-columns">
+      <section class="hair-products">
+        <h2>мы используем только лучшие средства:</h2>
+        <ul class="hair-products-list">
+          <li>baxter of california</li>
+          <li>mr natty</li>
+          <li>suavecito</li>
+          <li>malin+goetz</li>
+        </ul>
+      </section>
 
-    <section class="about-us">
-      <h2>Несколько слов о нас:</h2>
-      <p>
-        Наша парикмахерская занимается исключительно мужскими
-        стрижками. Стрижка каждого клиента для нас - это уникальная
-        и продуманная до мелочей работа. Мы не работаем на
-        количество, мы делаем качество.
-      </p>
-      <p>
-        Наша мастерская расположена в центре города, поэтому
-        сделать стильную стрижку можно в любое время, даже в
-        обеденный перерыв. Здесь вы можете погрузиться в удобную
-        для вас атмосферу, чувствовать себя комфортнои свободно.
-      </p>
-    </section>
+      <section class="price-services">
+        <h2>цены на услуги наших мастеров:</h2>
+        <table>
+          <tr>
+            <td>стрижка</td>
+            <td>1500 ₽</td>
+          </tr>
+          <tr>
+            <td>стрижка бороды</td>
+            <td>500 ₽</td>
+          </tr>
+          <tr>
+            <td>накрутка усов</td>
+            <td>350 ₽</td>
+          </tr>
+        </table>
+      </section>
 
+      <section class="about-us">
+        <h2>Несколько слов о нас:</h2>
+        <p>
+          Наша парикмахерская занимается исключительно мужскими
+          стрижками. Стрижка каждого клиента для нас - это уникальная
+          и продуманная до мелочей работа. Мы не работаем на
+          количество, мы делаем качество.
+        </p>
+        <p>
+          Наша мастерская расположена в центре города, поэтому
+          сделать стильную стрижку можно в любое время, даже в
+          обеденный перерыв. Здесь вы можете погрузиться в удобную
+          для вас атмосферу, чувствовать себя комфортнои свободно.
+        </p>
+      </section>
+    </div>
   </main>
 
   <footer class="page-footer">
-    <p class="footer-contacts">
-      барбершоп «бородинский»<br>
-      адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
-      <a href="#">Как нас найти?</a><br>
-      телефон: +7 (495) 666-02-66
-    </p>
+    <div class="container">
+      <p class="footer-contacts">
+        барбершоп «бородинский»<br>
+        адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
+        <a href="#">Как нас найти?</a><br>
+        телефон: +7 (495) 666-02-66
+      </p>
 
-    <div class="footer-social">
-      <b>давайте дружить!</b>
-      <ul class="social-list">
-        <li><a href="#" class="social-button">вконтакте</a></li>
-        <li><a href="#" class="social-button">фейсбук</a></li>
-        <li><a href="#" class="social-button">инстаграм</a></li>
-      </ul>
+      <div class="footer-social">
+        <b>давайте дружить!</b>
+        <ul class="social-list">
+          <li><a href="#" class="social-button"><span class="visually-hidden">вконтакте</span></a></li>
+          <li><a href="#" class="social-button"><span class="visually-hidden">фейсбук</span></a></li>
+          <li><a href="#" class="social-button"><span class="visually-hidden">инстаграм</span></a></li>
+        </ul>
+      </div>
+
+      <p class="footer-copyright">
+        <b>Разработано</b>
+        <a class="button" href="https://htmlacademy.ru/">html academy</a>
+      </p>
     </div>
-
-    <p class="footer-copyright">
-      <b>Разработано</b>
-      <a class="button" href="https://htmlacademy.ru/">html academy</a>
-    </p>
   </footer>
 
   <section class="modal modal-authentication">
