--- a/price.html
+++ b/price.html
@@ -49,7 +49,7 @@
       </section>
 
       <section class="price-services">
-        <h2>цены на услуги наших мастеров:</h2>
+        <h2>цены на услуги<br>наших мастеров:</h2>
         <table>
           <tr>
             <td>стрижка</td>
@@ -68,18 +68,20 @@
 
       <section class="about-us">
         <h2>Несколько слов о нас:</h2>
-        <p>
-          Наша парикмахерская занимается исключительно мужскими
-          стрижками. Стрижка каждого клиента для нас - это уникальная
-          и продуманная до мелочей работа. Мы не работаем на
-          количество, мы делаем качество.
-        </p>
-        <p>
-          Наша мастерская расположена в центре города, поэтому
-          сделать стильную стрижку можно в любое время, даже в
-          обеденный перерыв. Здесь вы можете погрузиться в удобную
-          для вас атмосферу, чувствовать себя комфортнои свободно.
-        </p>
+        <div class="about-us-description">
+          <p>
+            Наша парикмахерская занимается исключительно мужскими
+            стрижками. Стрижка каждого клиента для нас - это уникальная
+            и продуманная до мелочей работа. Мы не работаем на
+            количество, мы делаем качество.
+          </p>
+          <p>
+            Наша мастерская расположена в центре города, поэтому
+            сделать стильную стрижку можно в любое время, даже в
+            обеденный перерыв. Здесь вы можете погрузиться в удобную
+            для вас атмосферу, чувствовать себя комфортнои свободно.
+          </p>
+        </div>
       </section>
     </div>
   </main>
