--- a/catalog.html
+++ b/catalog.html
@@ -44,7 +44,7 @@
 
           <fieldset>
             <legend>производители:</legend>
-            <ul>
+            <ul class="producers-list">
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox"
                        type="checkbox" id="baxter-of-california"
@@ -81,7 +81,7 @@
 
           <fieldset>
             <legend>группы товаров:</legend>
-            <ul>
+            <ul class="product-groups">
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-radio"
                        type="radio" id="shaving-accessories" name="group-product"
