--- a/price.html
+++ b/price.html
@@ -10,7 +10,7 @@
 
 <body class="inner-page">
   <header class="page-header">
-    <nav class="header-navigation">
+    <nav class="header-navigation container">
       <a href="index.html" class="header-logo">
         <img src="./img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
