--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
       </ul>
 
       <ul class="user-navigation">
-        <li><a href="#">вход</a></li>
+        <li><a href="#" class="login-link">вход</a></li>
       </ul>
     </nav>
   </header>
@@ -44,7 +44,7 @@
 
           <fieldset>
             <legend>производители:</legend>
-            <ul class="producers-list">
+            <ul>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox"
                        type="checkbox" id="baxter-of-california"
@@ -81,7 +81,7 @@
 
           <fieldset>
             <legend>группы товаров:</legend>
-            <ul class="product-groups">
+            <ul>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-radio"
                        type="radio" id="shaving-accessories" name="group-product"
