--- a/price.html
+++ b/price.html
@@ -23,7 +23,7 @@
       </ul>
 
       <ul class="user-navigation">
-        <li><a href="#">вход</a></li>
+        <li><a href="#" class="login-link">вход</a></li>
       </ul>
     </nav>
   </header>
