fix for lesson-5

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             action="https://echo.htmlacademy.ru"
             method="post"
           >
-            <div class="apponiment-form-item">
+            <div class="apponiment-form-group">
               <p class="appointment-item">
                 <label for="date-field">дата</label>
                 <input
@@ -168,7 +168,7 @@
                 />
               </p>
             </div>
-            <div class="apponiment-form-item">
+            <div class="apponiment-form-group">
               <p class="appointment-item">
                 <label for="name-field">ваше имя</label>
                 <input
