--- a/catalog-item.html
+++ b/catalog-item.html
@@ -1,160 +1,201 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-  <meta charset="utf-8" />
-  <title>Borodinsky</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheets/main.css" />
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Borodinsky</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/main.css" />
+  </head>
 
-<body class="inner-page">
-  <header class="page-header">
-    <nav class="header-navigation container">
-      <a href="index.html" class="header-logo">
-        <img src="./img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
-      </a>
-      <ul class="app-navigation">
-        <li><a href="#">информация</a></li>
-        <li><a href="#">новости</a></li>
-        <li><a href="price.html">прайс-лист</a></li>
+  <body class="inner-page">
+    <header class="page-header">
+      <nav class="header-navigation container">
+        <a href="index.html" class="header-logo">
+          <img src="./img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+        </a>
+        <ul class="app-navigation">
+          <li><a href="#">информация</a></li>
+          <li><a href="#">новости</a></li>
+          <li><a href="price.html">прайс-лист</a></li>
+          <li><a href="catalog.html">магазин</a></li>
+          <li><a href="#">контакты</a></li>
+        </ul>
+
+        <ul class="user-navigation">
+          <li><a href="#" class="login-link">вход</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="container">
+      <h1 class="page-title">Набор для путешествий «baxter of california»</h1>
+
+      <ul class="breadcrumbs">
+        <li><a href="index.html">главная</a></li>
         <li><a href="catalog.html">магазин</a></li>
-        <li><a href="#">контакты</a></li>
+        <li><a href="#">средства для ухода</a></li>
+        <li class="breadcrumbs-current">Набор для путешествий «baxter of california»</li>
       </ul>
 
-      <ul class="user-navigation">
-        <li><a href="#" class="login-link">вход</a></li>
-      </ul>
-    </nav>
-  </header>
+      <div class="product-columns">
+        <section class="product-photos">
+          <h2 class="visually-hidden">Изображения товара</h2>
+          <p class="product-photo-full">
+            <img src="./img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
+          </p>
+          <ul class="product-photo-preview">
+            <li><img src="./img/product-small-1.jpeg" width="140" height="149" alt="Фото в анфас"></li>
+            <li><img src="./img/product-small-2.jpeg" width="140" height="149" alt="Фото в профиль"></li>
+            <li><img src="./img/product-small-3.jpeg" width="140" height="149" alt="Фото отдельной части"></li>
+          </ul>
+        </section>
 
-  <main class="container">
-    <h1 class="page-title">Набор для путешествий «baxter of california»</h1>
+        <section class="product-info">
+          <h2 class="visually-hidden">Описание товара</h2>
+          <p class="product-description">
+            <span class="product-availability">есть в наличии</span>
+            <span class="product-article">артикул: dexter-ae</span>
+          </p>
 
-    <ul class="breadcrumbs">
-      <li><a href="index.html">главная</a></li>
-      <li><a href="catalog.html">магазин</a></li>
-      <li><a href="#">средства для ухода</a></li>
-      <li class="breadcrumbs-current">Набор для путешествий «baxter of california»</li>
-    </ul>
+          <p class="product-text">
+            Travel kit - необходимый аксессуар во время любого
+            путешествия. В аккуратной кожаной сумке находится все, что
+            нужно для бритья и ухода за кожей во время рабочей поездки
+            или отдыха: средство для умывания, увлажняющий крем, крем
+            для бритья, крем после бритья, шампунь. Набор также может
+            стать отличным подарком.
+          </p>
 
-    <div class="product-columns">
-      <section class="product-photos">
-        <h2 class="visually-hidden">Изображения товара</h2>
-        <p class="product-photo-full">
-          <img src="./img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
-        </p>
-        <ul class="product-photo-preview">
-          <li><img src="./img/product-small-1.jpeg" width="140" height="149" alt="Фото в анфас"></li>
-          <li><img src="./img/product-small-2.jpeg" width="140" height="149" alt="Фото в профиль"></li>
-          <li><img src="./img/product-small-3.jpeg" width="140" height="149" alt="Фото отдельной части"></li>
-        </ul>
-      </section>
+          <p class="product-price">
+            <span>2 900 ₽</span>
+            <a class="button" href="#">купить</a>
+          </p>
 
-      <section class="product-info">
-        <h2 class="visually-hidden">Описание товара</h2>
-        <p class="product-description">
-          <span class="product-availability">есть в наличии</span>
-          <span class="product-article">артикул: dexter-ae</span>
-        </p>
-
-        <p class="product-text">
-          Travel kit - необходимый аксессуар во время любого
-          путешествия. В аккуратной кожаной сумке находится все, что
-          нужно для бритья и ухода за кожей во время рабочей поездки
-          или отдыха: средство для умывания, увлажняющий крем, крем
-          для бритья, крем после бритья, шампунь. Набор также может
-          стать отличным подарком.
-        </p>
-
-        <p class="product-price">
-          <span>2 900 ₽</span>
-          <a class="button" href="#">купить</a>
-        </p>
-
-        <h3>В набор входят:</h3>
-        <ul class="kit-list">
-          <li>средство для умывания (50 мл)</li>
-          <li>увлажняющий крем (50 мл)</li>
-          <li>крем для бритья (50 мл)</li>
-          <li>крем после бритья, шампунь (50 мл)</li>
-          <li>удобная кожаная косметичка</li>
-        </ul>
-      </section>
-    </div>
-
-
-
-  </main>
-
-  <footer class="page-footer">
-    <div class="container">
-      <p class="footer-contacts">
-        барбершоп «бородинский»<br>
-        адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
-        <a href="#">Как нас найти?</a><br>
-        телефон: +7 (495) 666-02-66
-      </p>
-
-      <div class="footer-social">
-        <b>давайте дружить!</b>
-        <ul class="social-list">
-          <li><a href="#" class="social-button"><span class="visually-hidden">
-            вконтакте
-          </span></a></li>
-          <li><a href="#" class="social-button"><span class="visually-hidden">
-            фейсбук
-          </span></a></li>
-          <li><a href="#" class="social-button"><span class="visually-hidden">
-            инстаграм
-          </span></a></li>
-        </ul>
+          <h3>В набор входят:</h3>
+          <ul class="kit-list">
+            <li>средство для умывания (50 мл)</li>
+            <li>увлажняющий крем (50 мл)</li>
+            <li>крем для бритья (50 мл)</li>
+            <li>крем после бритья, шампунь (50 мл)</li>
+            <li>удобная кожаная косметичка</li>
+          </ul>
+        </section>
       </div>
+    </main>
 
-      <p class="footer-copyright">
-        <b>Разработано</b>
-        <a class="button" href="https://htmlacademy.ru/">html academy</a>
-      </p>
-    </div>
-  </footer>
+    <footer class="page-footer">
+      <div class="container">
+        <p class="footer-contacts">
+          барбершоп «бородинский»<br />
+          адрес: г.санкт-петербург, б.конюшенная, д.19/8<br />
+          <a href="#">Как нас найти?</a><br />
+          телефон: +7 (495) 666-02-66
+        </p>
 
-  <section class="modal modal-authentication">
-    <h2>Личный кабинет</h2>
-    <p class="login-info">
-      введите пожалуйста свой логин и пароль
-    </p>
-    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-      <p>
-        <label class="visually-hidden" for="user-login">логин</label>
-        <input class="login-icon-user" type="text"
-                name="login" id="user-login" placeholder="логин">
-      </p>
-      <p>
-        <label class="visually-hidden" for="user-password">пароль</label>
-        <input class="login-icon-password" type="password"
-                name="password" id="user-password" placeholder="пароль">
-      </p>
-      <p class="login-password-info">
-        <label class="login-checkbox">
-          <input class="visually-hidden" type="checkbox" name="remember" checked>
-          запомнить меня
-        </label>
-        <a class="restore" href="#">я забыл пароль!</a>
-      </p>
+        <div class="footer-social">
+          <b>давайте дружить!</b>
+          <ul class="social-list">
+            <li>
+              <a href="#" class="social-button"
+                ><span class="visually-hidden">вконтакте</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="27" height="15">
+                  <path fill="#fff" d="
+                    M26 13.47l-.09-.17c-.71-1.12-1.59-2.13-2.6-3-.58-.55-.95-.93-1.1-1.12-.32-.3-.41-.78-.21
+                    -1.18.34-.63.75-1.23 1.22-1.78l.88-1.16c1.57-2.09 2.23-3.42 2-4L26 .94c-.11-.11-.25-.19-.4
+                    -.22-.29-.06-.58-.06-.87 0h-3.92c-.09-.02-.18-.02-.27 0h-.3c-.06.04-.11.09-.15.14-.06.07-.1
+                    1.15-.14.24-.41 1.06-.9 2.08-1.46 3.06-.33.56-.64 1.05-.93 1.46-.21.32-.45.63-.71.91-.16.17
+                    -.34.33-.52.47-.15.12-.27.17-.35.15l-.23-.05c-.13-.08-.24-.2-.31-.33-.09-.17-.14-.34-.16-.53
+                    V1.6c.02-.21.02-.41 0-.62-.03-.15-.08-.3-.14-.44-.06-.14-.16-.25-.28-.33-.14-.08-.3-.14-.46
+                    -.18-.61-.07-1.22-.08-1.83-.03-1.09-.09-2.2.02-3.25.33-.2.1-.37.24-.52.41-.17.2-.19.31-.07.3
+                    3.45.03.87.24 1.16.59l.08.16c.09.2.15.41.19.63.07.33.11.66.12 1 .05.57.05 1.13 0 1.7-.05.47
+                    -.09.84-.13 1.1-.03.22-.09.44-.18.64-.05.1-.1.2-.16.3l-.07.07c-.12.05-.24.07-.37.07-.17-.02
+                    -.33-.08-.46-.19-.21-.15-.39-.33-.56-.52-.24-.29-.47-.6-.66-.93-.25-.4-.5-.87-.76-1.42l-.22
+                    -.39c-.13-.25-.32-.62-.56-1.11-.24-.49-.45-.96-.62-1.43-.06-.18-.18-.33-.33-.44h-.07C5.06.84
+                    4.99.78 4.91.74 4.81.7 4.71.67 4.6.65L.87.68C.59.65.31.75.1.94L0 1c-.02.07-.02.15 0 .22 0
+                    .13.03.25.08.37.55 1.29 1.14 2.53 1.78 3.72.64 1.19 1.19 2.14 1.66 2.87S4.49 9.59 5 10.24
+                    c.51.65.85 1.06 1 1.24l.37.41.34.33c.31.29.65.55 1 .78.45.32.92.62 1.4.9.56.32 1.17.56
+                    1.79.72.65.18 1.33.26 2
+                    .22h1.57c.27-.01.53-.11.72-.3l.05-.07c.05-.08.08-.16.1-.25.02-.12.02-.25
+                    0-.37-.01-.35.02-.7.09-1.05.04-.25.12-.48.23-.71.08-.15.17-.28.29-.4.07
+                    -.08.15-.14.23-.2h.11c.28-.06.56.02.77.21.31.23.59.49.83.79.26.31.57.66.93
+                    1.05.3.32.64.62 1 .87l.27.16c.22.13.46.23.71.3.24.09.5.11.76.07l3.48-.05c.28.01.55-.04.8
+                    -.17.16-.08.28-.21.34-.37.03-.15.03-.31 0-.46-.02-.12-.05-.24-.1-.36z"/>
+                </svg></a
+              >
+            </li>
+            <li>
+              <a href="#" class="social-button"
+                ><span class="visually-hidden">фейсбук</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="22">
+                  <path fill="#fff" d="
+                    M3.34 1.12C4.23.37 5.37-.03 6.53 0h3.61v3.81H7.81c-.52-.02-.97.33-1.09.83v2.55h3.42c
+                    -.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66c.05-.96.46-1.87
+                    1.15-2.54z"/>
+                </svg></a
+              >
+            </li>
+            <li>
+              <a href="#" class="social-button"
+                ><span class="visually-hidden">инстаграм</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                  <path fill="#fff" d="
+                    M20 2v16c0 1.1-.9 2-2 2H2c-1.1 0-2-.9-2-2V2C0 .9.9 0 2 0h16c1.1 0 2 .9 2 2zM6 10c
+                    0 2.21 1.79 4 4 4s4-1.79 4-4-1.79-4-4-4-4 1.79-4 4zm11.5 8c.14.01.27-.04.36-.14.1
+                    -.1.15-.23.14-.36V9h-2.1c.08.33.12.66.1 1 0 3.31-2.69 6-6 6s-6-2.69-6-6c-.02-.34.02
+                    -.67.1-1H2v8.5c-.01.14.04.27.14.36.1.1.23.15.36.14zM18 2.5c.01-.14-.04-.27-.14-.36
+                    -.1-.1-.23-.15-.36-.14h-2c-.14-.01-.27.04-.36.14-.1.1-.15.23-.14.36v2c-.01.14.04.27
+                    .14.36.1.1.23.15.36.14h2c.14.01.27-.04.36-.14.1-.1.15-.23.14-.36z"/>
+                </svg></a
+              >
+            </li>
+          </ul>
+        </div>
 
-      <button class="button" type="submit">Войти</button>
-    </form>
-    <button class="modal-close" type="button">
-      <span class="visually-hidden">закрыть</span>
-    </button>
-  </section>
+        <p class="footer-copyright">
+          <b>Разработано:</b>
+          <a class="button" href="https://htmlacademy.ru/">html academy</a>
+        </p>
+      </div>
+    </footer>
 
-  <section class="modal modal-map">
-    <h2 class="visually-hidden">Где нас найти</h2>
-    <button type="button" class="modal-close">
+    <section class="modal modal-authentication">
+      <h2>Личный кабинет</h2>
+      <p class="login-info">
+        введите пожалуйста свой логин и пароль
+      </p>
+      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+        <p>
+          <label class="visually-hidden" for="user-login">логин</label>
+          <input class="login-icon-user" type="text"
+                  name="login" id="user-login" placeholder="логин">
+        </p>
+        <p>
+          <label class="visually-hidden" for="user-password">пароль</label>
+          <input class="login-icon-password" type="password"
+                  name="password" id="user-password" placeholder="пароль">
+        </p>
+        <p class="login-password-info">
+          <label class="login-checkbox">
+            <input class="visually-hidden" type="checkbox" name="remember" checked>
+            запомнить меня
+          </label>
+          <a class="restore" href="#">я забыл пароль!</a>
+        </p>
+
+        <button class="button" type="submit">Войти</button>
+      </form>
+      <button class="modal-close" type="button">
         <span class="visually-hidden">закрыть</span>
-    </button>
-  </section>
-</body>
+      </button>
+    </section>
+
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Где нас найти</h2>
+      <button type="button" class="modal-close">
+          <span class="visually-hidden">закрыть</span>
+      </button>
+    </section>
+  </body>
 
 </html>
